--- a/loop/index.html
+++ b/loop/index.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<style type="text/css">
 			.container{
-				background-color: grey;
+				/*background-color: grey;*/
 				/*height: 100px;*/
 			}
 			.box{
@@ -15,13 +15,22 @@
 				/*height: 100px;*/
 				background-color: pink;
 			}
+			.logoBox{
+				align-content: center;
+			}
+			.logoImg{
+				width: 200px;
+			}
+			.navBox{
+				height: 55px;
+			}
 			.main-news{
 				background-color: green;
 				height: 800px;
 			}
 			.programs{
 				background-color: #0fa2a9;
-				border-left-width: 20px;
+				border-left-width: 15px;
 			}
 			.rolling-news{
 				/*border: 2px solid red;*/
@@ -50,16 +59,16 @@
 				<div class="col-2 box">
 					offset
 				</div>
-				<div class="col-8 box">
-					logo
+				<div class="col-8 box ">
+					<img src="images/shared/logo.png"  class="rounded mx-auto d-block logoImg">
 				</div>
-				<div class="col-2 box">
+				<div class="col-2 box logoBox">
 					language button
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="col-12 box">
+				<div class="col-12 box navBox">
 					nav bar
 				</div>
 			</div>
