--- a/loop/index_v2.html
+++ b/loop/index_v2.html
@@ -22,7 +22,7 @@
 				width: 250px;
 			}
 			.navBox{
-				height: 55px;
+				/*height: 55px;*/
 			}
 			.main-news{
 				background-color: green;
@@ -66,7 +66,41 @@
 
 			<div class="row">
 				<div class="col-12 box navBox">
-					nav bar
+					<nav class="navbar navbar-expand-lg navbar-light bg-light">
+					  <a class="navbar-brand" href=" " style="color:#d40045;">美中新视角基金会</ a>
+					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+					    <span class="navbar-toggler-icon"></span>
+					  </button>
+
+					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+					    <ul class="navbar-nav mr-auto">
+					      <li class="nav-item">
+					        <a class="nav-link" href="">首页 <span class="sr-only">(current)</span></ a>
+					      </li>
+					      <li class="nav-item dropdown">
+					        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					          项目
+					        </ a>
+					        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					          <a class="dropdown-item" href="">政策性研讨会</ a>
+					          <a class="dropdown-item" href="">民间交流</ a>
+					          <!-- <div class="dropdown-divider"></div> -->
+					          <a class="dropdown-item" href="">培养未来领袖</ a>
+					        </div>
+					      </li>
+					      <li class="nav-item">
+					        <a class="nav-link" href="">新视角杂志</ a>
+					      </li>
+					      <li class="nav-item">
+					        <a class="nav-link" href="">关于我们</ a>
+					      </li>
+					    </ul>
+					    <form class="form-inline my-2 my-lg-0">
+					      <input class="form-control mr-sm-2" type="search" placeholder="输入内容" aria-label="Search">
+					      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜索</button>
+					    </form>
+					  </div>
+					</nav>
 				</div>
 			</div>
 
@@ -92,5 +126,27 @@
 			</div>
 
 		</div>
+
+
+	<script type="text/javascript">
+		var url = window.location.href;
+		var parsePart = url.split("/");
+		console.log(parsePart);
+		var x;
+		if(parsePart[parsePart.length-1] === "index.html"){
+			x = document.getElementsByClassName("nav-item")[0];
+		}
+		else if(parsePart[parsePart.length-1] === "project.html"){
+			x = document.getElementsByClassName("nav-item")[1];
+		}
+		else if(parsePart[parsePart.length-1] === "view.html"){
+			x = document.getElementsByClassName("nav-item")[2];
+		}
+		else if(parsePart[parsePart.length-1] === "contact.html"){
+			x = document.getElementsByClassName("nav-item")[3];
+		}
+		x.setAttribute("class", "nav-item active");
+		x.style = "font-weight:bold";
+	</script>
 	</body>
 </html>
