--- a/loop/index_v3.html
+++ b/loop/index_v3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>index page</title>
+		<title>首页</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<style type="text/css">
@@ -52,6 +52,9 @@
 				/*margin-left: 10px;*/
 				background-color: #f1d3a1;
 			}
+			.navbar-brand{
+				font-weight:bold;
+			}
 		</style>
 	</head>
 	<body>
@@ -68,27 +71,40 @@
 			<div class="row">
 				<div class="col-12 box navBox">
 					<nav class="navbar navbar-expand-lg navbar-light bg-light">
-					  <a class="navbar-brand" href="#">Navbar</a>
-					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					  <a class="navbar-brand" href="#" style="color:#d40045;">美中新视角基金会</a>
+					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					    <span class="navbar-toggler-icon"></span>
 					  </button>
-					  <div class="collapse navbar-collapse" id="navbarNav">
-					    <ul class="navbar-nav">
-					      <li class="nav-item active">
-					        <a class="nav-link" href="#">首页 <span class="sr-only">(current)</span></a>
+
+					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+					    <ul class="navbar-nav mr-auto">
+					      <li class="nav-item">
+					        <a class="nav-link" href="">首页 <span class="sr-only">(current)</span></a>
+					      </li>
+					      <li class="nav-item dropdown">
+					        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					          项目
+					        </a>
+					        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					          <a class="dropdown-item" href="">政策性研讨会</a>
+					          <a class="dropdown-item" href="">民间交流</a>
+					          <a class="dropdown-item" href="">培养未来领袖</a>
+					        </div>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="#">Features</a>
+					        <a class="nav-link" href="">新视角杂志</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="#">Pricing</a>
-					      </li>
-					      <li class="nav-item">
-					        <a class="nav-link disabled" href="#">Disabled</a>
+					        <a class="nav-link" href="">关于我们</a>
 					      </li>
 					    </ul>
+					    <form class="form-inline my-2 my-lg-0">
+					      <input class="form-control mr-sm-2" type="search" placeholder="输入内容" aria-label="Search">
+					      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜索</button>
+					    </form>
 					  </div>
 					</nav>
+
 				</div>
 			</div>
 
@@ -96,46 +112,46 @@
 				<div class="col-8 box main-news">
 					<div class="row rolling-news">
 						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <a href="">
-      <img class="d-block w-100" src="images/xuezheduihua.jpg" height="400px" width="1000px" alt="First slide">
-      </a>
-      <div class="carousel-caption d-none d-md-block">
-    	<p>中日学者朝核问题对话</p>
-  	  </div>
-    </div>
-    <div class="carousel-item">
-      <a href="">
-      <img class="d-block w-100" src="images/guojifankong.jpg" height="400px" width="1000px" alt="Second slide">
-      </a>
-      <div class="carousel-caption d-none d-md-block">
-    	<p>第三届中美国际反恐学术研讨会</p>
-  	  </div>
-    </div>
-    <div class="carousel-item">
-      <a>
-      <img class="d-block w-100" src="images/xuanfeng.jpg" height="400px" width="1000px" alt="Third slide">
-      </a>
-      <div class="carousel-caption d-none d-md-block">
-    	<p>纪录片《旋风九日》在华盛顿展映</p>
-  	  </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+						  <ol class="carousel-indicators">
+						    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+						    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+						    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+						  </ol>
+						  <div class="carousel-inner">
+						    <div class="carousel-item active">
+						      <a href="">
+						      <img class="d-block" src="images/xuezheduihua.jpg" height="380px" width="750px" alt="First slide">
+						      </a>
+						      <div class="carousel-caption d-none d-md-block">
+						    	<p>中日学者朝核问题对话</p>
+						  	  </div>
+						    </div>
+						    <div class="carousel-item">
+						      <a href="">
+						      <img class="d-block" src="images/guojifankong.jpg" height="380px" width="750px" alt="Second slide">
+						      </a>
+						      <div class="carousel-caption d-none d-md-block">
+						    	<p>第三届中美国际反恐学术研讨会</p>
+						  	  </div>
+						    </div>
+						    <div class="carousel-item">
+						      <a>
+						      <img class="d-block" src="images/xuanfeng.jpg" height="380px" width="750px" alt="Third slide">
+						      </a>
+						      <div class="carousel-caption d-none d-md-block">
+						    	<p>纪录片《旋风九日》在华盛顿展映</p>
+						  	  </div>
+						    </div>
+						  </div>
+						  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+						    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						    <span class="sr-only">Previous</span>
+						  </a>
+						  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+						    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+						    <span class="sr-only">Next</span>
+						  </a>
+						</div>
 					</div>
 
 					<div class="row event-view">
@@ -154,9 +170,11 @@
 			</div>
 
 		</div>
-
-
-	<script type="text/javascript">
+	</body>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script type="text/javascript">
 		var url = window.location.href;
 		var parsePart = url.split("/");
 		console.log(parsePart);
@@ -176,5 +194,4 @@
 		// x.setAttribute("class", "nav-item active");
 		// x.style = "font-weight:bold";
 	</script>
-	</body>
 </html>
