--- a/loop/index_v3.html
+++ b/loop/index_v3.html
@@ -106,7 +106,7 @@
 					    </ul>
 					    <form class="form-inline my-2 my-lg-0" style="margin-right:-30px;">
 					      <input class="form-control mr-sm-2" type="search" placeholder="输入内容" aria-label="Search">
-					      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">搜索</button>
+					      <button class="btn btn-primary my-2 my-sm-0" type="submit">搜索</button>
 					    </form>
 					  </div>
 					</nav>
