--- a/loop/index_v3.html
+++ b/loop/index_v3.html
@@ -4,6 +4,7 @@
 		<title>首页</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="footer.css">
 		<style type="text/css">
 			.container{
 				/*background-color: grey;*/
@@ -52,6 +53,16 @@
 			.view{
 				/*margin-left: 10px;*/
 				background-color: #f1d3a1;
+			}
+			.footerBox{
+				height: 200px;
+				
+				border-top-width: 20px;
+			}
+			.QRcodeBox{
+				height: 200px;
+				
+				border-top-width: 20px;
 			}
 		</style>
 	</head>
@@ -173,11 +184,27 @@
 					</div>
 				</div>
 
-				<div class="col-4 box programs">
+				<div class="col-4 box programs" >
 					programs
 				</div>
 			</div>
 
+			<div class="row">
+				<div class="col-9 box footerBox">
+					<footer class="footer-div">
+						<a id="footer-link" href="">版权声明 </a><b>|</b><a id="footer-link" href="contact.html"> 联系方式</a>
+						<p style="margin-top:10px;">美中新视角基金会版权所有 Copyright &copy; The U.S.-China New Perspectives Foundation</p>
+						<p>电话TEL：+1（626）656-3512 (U.S.);</p> 
+						<p style="text-indent: 5em;">+86（10）6496-1765（中国)</p>
+					</footer>
+				</div>
+				<div class="col-3 box QRcodeBox">
+					<div class="scan-links"> 
+          				<a class="forum-link" href="#"><img src="images/weixin.png" alt="微信公众号"/ style="padding-bottom:20px;"></a>
+          				<p>微信公众号</p> 
+      				</div>
+				</div>
+			</div>
 		</div>
 	</body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
