--- a/loop/index_v3.html
+++ b/loop/index_v3.html
@@ -28,13 +28,29 @@
 				color:#093f86;
 			}
 			.main-news{
-				background-color: green;
+				/*background-color: #dbdde0;*/
 				height: 800px;
 			}
 			.programs{
-				background-color: #0fa2a9;
+				/*background-color: grey;*/
 				border-left-width: 15px;
+				height: 800px;
 			}
+			.programContent{
+				overflow-y: scroll;
+				height: 725px;
+			}
+			.titleDiv{
+				/*background-color: green;*/
+			}
+			.breadcrumb{
+				height: 30px;
+				line-height: 9px;
+			}
+			.card-text{
+				line-height: 20px;
+			}
+
 			.rolling-news{
 				/*border: 2px solid red;*/
 				border-bottom-width: 20px;
@@ -44,19 +60,17 @@
 				height: 400px;
 			}
 			.event-view{
-				background-color: brown;
+				/*background-color: brown;*/
 				height: 300px;
 			}
 			.event{
-				background-color: #949217;
+				/*background-color: #949217;*/
 			}
 			.view{
-				/*margin-left: 10px;*/
-				background-color: #f1d3a1;
+				/*background-color: #f1d3a1;*/
 			}
 			.footerBox{
 				height: 200px;
-				
 				border-top-width: 20px;
 			}
 			.QRcodeBox{
@@ -176,16 +190,113 @@
 
 					<div class="row event-view">
 						<div class="col-6 event">
-							event
+							<nav aria-label="breadcrumb">
+							  <ol class="breadcrumb">
+							    <li class="breadcrumb-item active" aria-current="page"><strong>新闻动态</strong></li>
+							  </ol>
+							</nav>
+
+							<div class="row no-gutters mt-2">
+					            <div class="col-auto">
+					                <img src="images/xuanfeng.jpg" style="width: 200px;" class="img-fluid" alt="">
+					            </div>
+					            <div class="col">
+					                <div class="card-block px-2">
+					                    <h4 class="card-title">新闻主题</h4>
+					                    <p class="card-text">dsf dsf asdf ad ad asd asdf as DF AS SADF ASFD s dfas df</p>
+					                    <!-- <a href="#" class="btn btn-primary">BUTTON</a> -->
+					                </div>
+					            </div>
+					        </div>
+
+							<div class="row no-gutters mt-2">
+					            <div class="col-auto">
+					                <img src="images/xuanfeng.jpg" style="width: 200px;" class="img-fluid" alt="">
+					            </div>
+					            <div class="col">
+					                <div class="card-block px-2">
+					                    <h4 class="card-title">新闻主题</h4>
+					                    <p class="card-text">dsf dsf asdf ad ad asd asdf as DF AS SADF ASFD s dfas df</p>
+					                    <!-- <a href="#" class="btn btn-primary">BUTTON</a> -->
+					                </div>
+					            </div>
+					        </div>
 						</div>
+
 						<div class="col-6 view">
-							view
+							<nav aria-label="breadcrumb">
+							  <ol class="breadcrumb">
+							    <li class="breadcrumb-item active" aria-current="page"><strong>观点分享</strong></li>
+							  </ol>
+							</nav>
+
+							<div class="row no-gutters mt-2">
+					            <div class="col-auto">
+					                <img src="images/xuanfeng.jpg" style="width: 200px;" class="img-fluid" alt="">
+					            </div>
+					            <div class="col">
+					                <div class="card-block px-2">
+					                    <h4 class="card-title">观点名称</h4>
+					                    <p class="card-text">中东地区一直深受无效治理之苦：根据不同的宗教、宗派和种族背景，</p>
+					                    <!-- <a href="#" class="btn btn-primary">BUTTON</a> -->
+					                </div>
+					            </div>
+					        </div>
+
+							<div class="row no-gutters mt-2">
+					            <div class="col-auto">
+					                <img src="images/xuanfeng.jpg" style="width: 200px;" class="img-fluid" alt="">
+					            </div>
+					            <div class="col">
+					                <div class="card-block px-2">
+					                    <h4 class="card-title">观点名称</h4>
+					                    <p class="card-text">中东地区一直深受无效治理之苦：根据不同的宗教、宗派和种族背景，</p>
+					                    <!-- <a href="#" class="btn btn-primary">BUTTON</a> -->
+					                </div>
+					            </div>
+					        </div>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-4 box programs" >
-					programs
+					<nav aria-label="breadcrumb">
+					  <ol class="breadcrumb">
+					    <li class="breadcrumb-item active" aria-current="page"><strong>运营项目</strong></li>
+					  </ol>
+					</nav>
+
+					<div class="programContent">
+						<div class="card" style="width: 100%;">
+						  <img class="card-img-top" src="images/xuanfeng.jpg" alt="Card image cap">
+						  <div class="card-body">
+						    <p class="card-text">sdfas asdf asd sad fas df asdf af asd as s asfdsa df asd fasd asd asd safd asd a asd asd as asd as sad sa fsf</p>
+						  </div>
+						</div>
+
+						<div class="card mt-2" style="width: 100%;">
+						  <img class="card-img-top" src="images/xuanfeng.jpg" alt="Card image cap">
+						  <div class="card-body">
+						    <p class="card-text">sdfas asdf asd sad fas df asdf af asd as s asfdsa df asd fasd asd asd safd asd a asd asd as asd as sad sa fsf</p>
+						  </div>
+						</div>
+
+						<div class="card mt-2" style="width: 100%;">
+						  <img class="card-img-top" src="images/xuanfeng.jpg" alt="Card image cap">
+						  <div class="card-body">
+						    <p class="card-text">sdfas asdf asd sad fas df asdf af asd as s asfdsa df asd fasd asd asd safd asd a asd asd as asd as sad sa fsf</p>
+						  </div>
+						</div>
+
+						<div class="card mt-2" style="width: 100%;">
+						  <img class="card-img-top" src="images/xuanfeng.jpg" alt="Card image cap">
+						  <div class="card-body">
+						    <p class="card-text">sdfas asdf asd sad fas df asdf af asd as s asfdsa df asd fasd asd asd safd asd a asd asd as asd as sad sa fsf</p>
+						  </div>
+						</div>
+					</div>
+
+					
 				</div>
 			</div>
 
