--- a/loop/nav_ref.html
+++ b/loop/nav_ref.html
@@ -36,7 +36,7 @@
 			position: fixed;
 			top: 100px;
 			left: 0;
-		}	
+		}
 
 		html, body{
 			padding: 0;
@@ -214,5 +214,18 @@
 			University of Southern California &copy; 2018
 		</div>
 	</div>
+
+
+
+
+	<head>
+	
+	</head>
+
+
+
+
+
+
 </body>
 </html>
