--- a/loop/index_v3.html
+++ b/loop/index_v3.html
@@ -4,81 +4,10 @@
 		<title>首页</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="footer.css">
-		<style type="text/css">
-			.container{
-				/*background-color: grey;*/
-				/*height: 100px;*/
-			}
-			.box{
-				border-width: 5px;
-				border-color: white;
-				border-style: solid;
-				/*height: 100px;*/
-				/*background-color: pink;*/
-			}
-			.logoBox{
-				align-content: center;
-			}
-			.logoImg{
-				width: 250px;
-			}
-			.navBox{
-				/*height: 55px;*/
-				color:#093f86;
-			}
-			.main-news{
-				/*background-color: #dbdde0;*/
-				height: 800px;
-			}
-			.programs{
-				/*background-color: grey;*/
-				border-left-width: 15px;
-				height: 800px;
-			}
-			.programContent{
-				overflow-y: scroll;
-				height: 725px;
-			}
-			.titleDiv{
-				/*background-color: green;*/
-			}
-			.breadcrumb{
-				height: 30px;
-				line-height: 9px;
-			}
-			.card-text{
-				line-height: 20px;
-			}
-
-			.rolling-news{
-				/*border: 2px solid red;*/
-				border-bottom-width: 20px;
-				border-bottom-color: white;
-				border-bottom-style: solid;
-				background-color: #055D87;
-				height: 400px;
-			}
-			.event-view{
-				/*background-color: brown;*/
-				height: 300px;
-			}
-			.event{
-				/*background-color: #949217;*/
-			}
-			.view{
-				/*background-color: #f1d3a1;*/
-			}
-			.footerBox{
-				height: 200px;
-				border-top-width: 20px;
-			}
-			.QRcodeBox{
-				height: 200px;
-				
-				border-top-width: 20px;
-			}
-		</style>
+		<link rel="stylesheet" href="css/footer.css">
+		<link rel="stylesheet" href="css/skeleton.css">
+		<link rel="stylesheet" href="css/index.css">
+		
 	</head>
 	<body>
 		<div class="container">
@@ -126,6 +55,12 @@
 					        <a class="nav-link" href="">新视角杂志</a>
 					      </li>
 					      <li class="nav-item">
+					        <a class="nav-link" href="">运营项目</a>
+					      </li>
+					      <li class="nav-item">
+					        <a class="nav-link" href="">钝角网</a>
+					      </li>
+					      <li class="nav-item">
 					        <a class="nav-link" href="">关于我们</a>
 					      </li>
 					    </ul>
@@ -151,11 +86,11 @@
 						  <div class="carousel-inner">
 						    <div class="carousel-item active">
 						      <a href="">
-						      <img class="d-block" src="images/xuezheduihua.jpg" height="310px" width="750px" alt="First slide">
+						      <img class="d-block" src="images/xuezheduihua.jpg"  height="310px" width="750px" alt="First slide">
 						      </a>
 						      <div name="format-padding" style="height:90px"></div>
 						      <div class="carousel-caption d-none d-md-block">
-						    	<p>中日学者朝核问题对话</p>
+						    	<p>中日学者朝核问题对话</p>	
 						  	  </div>
 						    </div>
 						    <div class="carousel-item">
@@ -300,19 +235,20 @@
 				</div>
 			</div>
 
-			<div class="row">
-				<div class="col-9 box footerBox">
+			<div class="row text-center">
+				<div class="col-9 footerBox">
 					<footer class="footer-div">
-						<a id="footer-link" href="">版权声明 </a><b>|</b><a id="footer-link" href="contact.html"> 联系方式</a>
+						<a class="footer-link" id="copyRight-link" href="">版权声明 </a><b>|</b><a class="footer-link" id="contact-link" href="contact.html"> 联系方式</a>
 						<p style="margin-top:10px;">美中新视角基金会版权所有 Copyright &copy; The U.S.-China New Perspectives Foundation</p>
 						<p>电话TEL：+1（626）656-3512 (U.S.);</p> 
 						<p style="text-indent: 5em;">+86（10）6496-1765（中国)</p>
 					</footer>
 				</div>
-				<div class="col-3 box QRcodeBox">
+				<div class="col-3 QRcodeBox">
 					<div class="scan-links"> 
-          				<a class="forum-link" href="#"><img src="images/weixin.png" alt="微信公众号"/ style="padding-bottom:20px;"></a>
-          				<p>微信公众号</p> 
+          				<a class="forum-link" href="#">
+          					<img class="scan-img" src="images/weixin.png" alt="微信公众号">
+          				</a>
       				</div>
 				</div>
 			</div>
