--- a/loop/contact.html
+++ b/loop/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>新视角杂志</title>
+		<title>关于我们</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/footer.css">
@@ -14,6 +14,12 @@
 			.box{
 				border:5px solid rgba(0,0,0,0);
 			}
+			.logoBox{
+				align-content: center;
+			}
+			.logoImg{
+				width: 250px;
+			}
 			.indexBox{
 				height: 800px;
 			}
@@ -22,9 +28,6 @@
 			}
 			.logoBox{
 				align-content: center;
-			}
-			.logoImg{
-				width: 250px;
 			}
 		</style>
 	</head>
@@ -70,7 +73,7 @@
 					        </div>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link active" href="magazine.html">新视角杂志</a>
+					        <a class="nav-link" href="magazine.html">新视角杂志</a>
 					      </li>
 					      <li class="nav-item">
 					        <a class="nav-link" href="">运营项目</a>
@@ -79,7 +82,7 @@
 					        <a class="nav-link" href="">钝角网</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="contact.html">关于我们</a>
+					        <a class="nav-link active" href="contact.html">关于我们</a>
 					      </li>
 					    </ul>
 					    <form class="form-inline my-2 my-lg-0" style="margin-right:-30px;">
@@ -95,15 +98,44 @@
 				</div>
 				<div class="col-10 box contentBox">
 					<div class="content-div" style="margin-top:20px;">
-						<h5>新视角杂志</h5>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">新视角为美中新视角基金会的杂志。2004年创刊，其前身是《领导者》杂志。杂志的定位是对中美关系，亚太事务以及其他重大全球性事务进行深度分析报道，希望以其深度剖析，独特视角全方位解读中美关系以及重大全球事务中存在的问题。
+						<h5>关于我们</h5>
+						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">美中新视角基金会于2016年成立于美国洛杉矶，2018年将主要办公职能转移到首都华盛顿，同时在美国东西海岸拥有办公地点。
 						</p>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">杂志的主要读者群为大陆的学者，政府高层官员（省部长、中央机关司局以上负责人、各地级市领导），特大型企业CEO、大型民营企业老板、跨国公司驻大中华区总裁、两院院士、部队军以上干部、各国驻华使领馆主要官员，以及其他关心中美关系和亚太事务的人士。
+						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
+							基金会是由一群致力于提升和贡献中美关系的个人组建的。其使命是寻找两国能够合作的领域，正视和缓解两国的分歧，以各类政策性研究和会议，各类教育交流活动为主要形式，达到促进中美关系向更加融洽和信任的方向发展的目的。
 						</p>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">新视角杂志由美中新视角基金会出版，出版人、编辑者、作者均为各个领域的顶尖人才。杂志不在市场上零售，不广泛接受订阅。
+						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
+							基金会是一个被美国国税局批准的501c3非营利教育性机构。
 						</p>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">
-						阅读杂志请点击：<a href="http://www.dunjiaodu.com/gonggao/2017-12-27/2325.html" style="font-size:15px;font-family:Georgia;">http://www.dunjiaodu.com/gonggao/2017-12-27/2325.html</a>
+						<HR align=center width=1000 color=black SIZE=5>
+						<h5>联系我们</h5>
+						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
+							美中新视角基金会美国联络处:
+						</p>
+						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
+							地址：1743 22nd St NW, Washington, DC 20008
+						</p>
+						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
+							地址：2804 Gateway Oaks Dr Ste 200 Sacramento CA 95833
+						</p>
+						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
+							电话：+1（626）656-3512
+						</p>
+						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
+							邮箱： info@ucnpf.org, ucnpf@163.com
+						</p>
+						<HR align=left width=55% color=black size=1>
+						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
+							美中新视角基金会中国联络处:
+						</p>
+						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
+							地址：北京市朝阳区北苑路180号加利大厦1号楼A-501
+						</p>
+						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
+							电话： +86 010-64961765
+						</p>
+						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
+							邮箱： info@ucnpf.org; ucnpf@163.com
 						</p>
 					</div>
 				</div>
