--- a/loop/index_v3.html
+++ b/loop/index_v3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>首页</title>
+		<title>美中新视角基金会</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/footer.css">
@@ -21,8 +21,8 @@
 					    切换语言
 					  </button>
 					  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="#">中文</a>
-					    <a class="dropdown-item" href="#">English</a>
+					    <a class="dropdown-item" href="">中文</a>
+					    <a class="dropdown-item" href="">English</a>
 					  </div>
 					</div>
 				</div>
@@ -31,7 +31,7 @@
 			<div class="row">
 				<div class="col-12 box navBox">
 					<nav class="navbar navbar-expand-lg navbar-default">
-					  <a class="navbar-brand" href="#" style="color:#d40045;font-weight:bold;margin-left:-30px;">美中新视角基金会</a>
+					  <a class="navbar-brand" href="index_v3.html" style="color:#d40045;font-weight:bold;margin-left:-30px;">美中新视角基金会</a>
 					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					    <span class="navbar-toggler-icon"></span>
 					  </button>
@@ -39,10 +39,10 @@
 					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 					    <ul class="navbar-nav mr-auto nav-pills">
 					      <li class="nav-item">
-					        <a class="nav-link active" href="">首页 <span class="sr-only">(current)</span></a>
+					        <a class="nav-link active" href="index_v3.html">首页 <span class="sr-only">(current)</span></a>
 					      </li>
 					      <li class="nav-item dropdown">
-					        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					        <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					          项目
 					        </a>
 					        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -52,7 +52,7 @@
 					        </div>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="">新视角杂志</a>
+					        <a class="nav-link" href="magazine.html">新视角杂志</a>
 					      </li>
 					      <li class="nav-item">
 					        <a class="nav-link" href="">运营项目</a>
@@ -61,7 +61,7 @@
 					        <a class="nav-link" href="">钝角网</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="">关于我们</a>
+					        <a class="nav-link" href="contact.html">关于我们</a>
 					      </li>
 					    </ul>
 					    <form class="form-inline my-2 my-lg-0" style="margin-right:-30px;">
@@ -78,7 +78,7 @@
 				<div class="col-8 box main-news">
 					<div class="row rolling-news">
 						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-						  <ol class="carousel-indicators" style="margin-top:10px;">
+						  <ol class="carousel-indicators">
 						    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 						    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 						    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
@@ -88,7 +88,7 @@
 						      <a href="">
 						      <img class="d-block" src="images/xuezheduihua.jpg"  height="310px" width="750px" alt="First slide">
 						      </a>
-						      <div name="format-padding" style="height:90px"></div>
+						      <div name="format-padding" style="height:85px"></div>
 						      <div class="carousel-caption d-none d-md-block">
 						    	<p>中日学者朝核问题对话</p>	
 						  	  </div>
@@ -97,16 +97,16 @@
 						      <a href="">
 						      <img class="d-block" src="images/guojifankong.jpg" height="310px" width="750px" alt="Second slide">
 						      </a>
-						      <div name="format-padding" style="height:90px"></div>
+						      <div name="format-padding" style="height:85px"></div>
 						      <div class="carousel-caption d-none d-md-block">
 						    	<p>第三届中美国际反恐学术研讨会</p>
 						  	  </div>
 						    </div>
 						    <div class="carousel-item">
-						      <a>
+						      <a href="">
 						      <img class="d-block" src="images/xuanfeng.jpg" height="310px" width="750px" alt="Third slide">
 						      </a>
-						      <div name="format-padding" style="height:90px"></div>
+						      <div name="format-padding" style="height:85px"></div>
 						      <div class="carousel-caption d-none d-md-block">
 						    	<p>纪录片《旋风九日》在华盛顿展映</p>
 						  	  </div>
@@ -235,7 +235,7 @@
 				</div>
 			</div>
 
-			<div class="row text-center">
+			<div class="row">
 				<div class="col-9 footerBox">
 					<footer class="footer-div">
 						<a class="footer-link" id="copyRight-link" href="">版权声明 </a><b>|</b><a class="footer-link" id="contact-link" href="contact.html"> 联系方式</a>
@@ -246,9 +246,10 @@
 				</div>
 				<div class="col-3 QRcodeBox">
 					<div class="scan-links"> 
-          				<a class="forum-link" href="#">
+          				<a class="forum-link" href="">
           					<img class="scan-img" src="images/weixin.png" alt="微信公众号">
           				</a>
+          				<p style="padding-top:20px;"> 微信公众号 </p>
       				</div>
 				</div>
 			</div>
@@ -257,24 +258,4 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-<script type="text/javascript">
-		var url = window.location.href;
-		var parsePart = url.split("/");
-		console.log(parsePart);
-		var x;
-		if(parsePart[parsePart.length-1] === "index.html"){
-			x = document.getElementsByClassName("nav-item")[0];
-		}
-		else if(parsePart[parsePart.length-1] === "project.html"){
-			x = document.getElementsByClassName("nav-item")[1];
-		}
-		else if(parsePart[parsePart.length-1] === "view.html"){
-			x = document.getElementsByClassName("nav-item")[2];
-		}
-		else if(parsePart[parsePart.length-1] === "contact.html"){
-			x = document.getElementsByClassName("nav-item")[3];
-		}
-		// x.setAttribute("class", "nav-item active");
-		// x.style = "font-weight:bold";
-	</script>
 </html>
