--- a/loop/view.html
+++ b/loop/view.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>关于我们</title>
+		<title>钝角网</title>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/footer.css">
@@ -79,10 +79,10 @@
 					        <a class="nav-link" href="">运营项目</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="view.html">钝角网</a>
+					        <a class="nav-link active" href="view.html">钝角网</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link active" href="contact.html">关于我们</a>
+					        <a class="nav-link" href="contact.html">关于我们</a>
 					      </li>
 					    </ul>
 					    <form class="form-inline my-2 my-lg-0" style="margin-right:-30px;">
@@ -98,67 +98,17 @@
 				</div>
 				<div class="col-10 box contentBox">
 					<div class="content-div" style="margin-top:20px;">
-						<h5>关于我们</h5>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">美中新视角基金会于2016年成立于美国洛杉矶，2018年将主要办公职能转移到首都华盛顿，同时在美国东西海岸拥有办公地点。
-						</p>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
-							基金会是由一群致力于提升和贡献中美关系的个人组建的。其使命是寻找两国能够合作的领域，正视和缓解两国的分歧，以各类政策性研究和会议，各类教育交流活动为主要形式，达到促进中美关系向更加融洽和信任的方向发展的目的。
-						</p>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
-							基金会是一个被美国国税局批准的501c3非营利教育性机构。
-						</p>
-						<HR align=center width=1000 color=black SIZE=5>
-						<h5>联系我们</h5>
-						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
-							美中新视角基金会美国联络处:
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：1743 22nd St NW, Washington, DC 20008
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：2804 Gateway Oaks Dr Ste 200 Sacramento CA 95833
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							电话：+1（626）656-3512
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							邮箱： info@ucnpf.org, ucnpf@163.com
-						</p>
-						<HR align=left width=55% color=black size=1>
-						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
-							美中新视角基金会中国联络处:
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：北京市朝阳区北苑路180号加利大厦1号楼A-501
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							电话： +86 010-64961765
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							邮箱： info@ucnpf.org; ucnpf@163.com
-						</p>
+						<h5>钝角网新闻</h5>
+						<ul class="list-group" style="background-color: rgba(0,0,0,0)">
+						  <li class="list-group-item">Cras justo odio</li>
+						  <li class="list-group-item">Dapibus ac facilisis in</li>
+						  <li class="list-group-item">Morbi leo risus</li>
+						  <li class="list-group-item">Porta ac consectetur ac</li>
+						  <li class="list-group-item">Vestibulum at eros</li>
+						</ul>
 					</div>
 				</div>
 				<div class="col-1 box indexBox">
-				</div>
-			</div>
-			<div class="row">
-				<HR align=center width=1200 color=black SIZE=5>
-				<div class="col-9 footerBox">
-					<footer class="footer-div">
-						<a class="footer-link" id="copyRight-link" href="">版权声明 </a><b>|</b><a class="footer-link" id="contact-link" href="contact.html"> 联系方式</a>
-						<p style="margin-top:10px;">美中新视角基金会版权所有 Copyright &copy; The U.S.-China New Perspectives Foundation</p>
-						<p>电话TEL：+1（626）656-3512 (U.S.);</p> 
-						<p style="text-indent: 5em;">+86（10）6496-1765（中国)</p>
-					</footer>
-				</div>
-				<div class="col-3 QRcodeBox">
-					<div class="scan-links"> 
-          				<a class="forum-link" href="">
-          					<img class="scan-img" src="images/weixin.png" alt="微信公众号">
-          				</a>
-          				<p style="padding-top:20px;"> 微信公众号 </p>
-      				</div>
 				</div>
 			</div>
 		</div>
