--- a/loop/index_v3.html
+++ b/loop/index_v3.html
@@ -58,7 +58,7 @@
 					        <a class="nav-link" href="">运营项目</a>
 					      </li>
 					      <li class="nav-item">
-					        <a class="nav-link" href="">钝角网</a>
+					        <a class="nav-link" href="view.html">钝角网</a>
 					      </li>
 					      <li class="nav-item">
 					        <a class="nav-link" href="contact.html">关于我们</a>
