--- a/loop/view.html
+++ b/loop/view.html
@@ -21,10 +21,10 @@
 				width: 250px;
 			}
 			.indexBox{
-				height: 800px;
+				height: 1600px;
 			}
 			.contentBox{
-				height: 800px;
+				height: 1600px;
 			}
 			.logoBox{
 				align-content: center;
@@ -98,17 +98,154 @@
 				</div>
 				<div class="col-10 box contentBox">
 					<div class="content-div" style="margin-top:20px;">
-						<h5>钝角网新闻</h5>
-						<ul class="list-group" style="background-color: rgba(0,0,0,0)">
-						  <li class="list-group-item">Cras justo odio</li>
-						  <li class="list-group-item">Dapibus ac facilisis in</li>
-						  <li class="list-group-item">Morbi leo risus</li>
-						  <li class="list-group-item">Porta ac consectetur ac</li>
-						  <li class="list-group-item">Vestibulum at eros</li>
-						</ul>
+						<nav aria-label="breadcrumb">
+						  <ol class="breadcrumb">
+						    <li class="breadcrumb-item active" aria-current="page"><strong>钝角网新闻选</strong></li>
+						  </ol>
+						</nav>
+
+						<div class="row no-gutters mt-2">
+					            <div class="col-auto">
+					                <img src="images/zh-cn/view/2017-09-26/ad9b5355a0532482e1a837d00eea5fe6.jpg" style="width: 150px; height: 100px" class="img-fluid" alt="">
+					            </div>
+					            <div class="col">
+					                <div class="card-block px-2">
+					                    <a href=""><h6 class="card-title">斯坦加龙：“伊朗谈判”和“朝鲜交易”，特朗普在联合国大会演讲中的悖论</h6></a>
+					                    <p class="card-text" style="line-height:1.3em;">19日，特朗普总统在联合国大会上的发言第一次强调了国家主权在国际关系中需要发挥更大的作用。他还呼吁联合国解决来自朝鲜的迫在眉睫的威胁。虽然他强调的国家主权和国际合作的想法不一定相互矛盾，但两者之间却存在潜在的博弈关系...</p>
+					                </div>
+					            </div>
+					        </div>
+					    <HR align=center width=900 color=black SIZE=5>
+						<div class="row no-gutters mt-2">
+				            <div class="col-auto">
+				                <img src="images/zh-cn/view/2017-03-28/fd0ca48b8d41940b7a1f7c39e53452a9.jpg" style="width: 150px; height:100px;" class="img-fluid" alt="">
+				            </div>
+				            <div class="col">
+				                <div class="card-block px-2">
+				                    <a href=""><h6 class="card-title">加拉格尔：美国反恐战略再思考，消除恐怖主义威胁需要中美合作</h6></a>
+				                    <p class="card-text" style="line-height:1.3em;">编者按：在奥巴马执政的八年间，反恐这一问题无疑是工作重点之一。在奥巴马任期行将结束之际，本刊专访了美国全球接触研究所总裁、前美国参谋长联席会议特别助理约翰·加拉格尔，探讨了美国的反恐战略以及中东政策等问题...</p>
+				                </div>
+				            </div>
+				        </div>
+				        <HR align=center width=900 color=black SIZE=5>
+						<div class="row no-gutters mt-2">
+				            <div class="col-auto">
+				                <img src="http://www.dunjiaodu.com/d/file/top/2017-03-16/ffff42dcc565ed224de96f3a82d1f2f7.jpg" style="width: 150px; height:100px;" class="img-fluid" alt="">
+				            </div>
+				            <div class="col">
+				                <div class="card-block px-2">
+				                    <a href=""><h6 class="card-title">中日学者朝核问题对话（二）：朝鲜成功拥核的原因</h6></a>
+				                    <p class="card-text" style="line-height:1.3em;">周志兴：第二节的题目是“朝鲜成功拥核的原因”，第一个发言的是中央党校国际战略研究院的张琏瑰教授。张教授对朝鲜非常了解，他毕业于金日成大学，还曾长期在中朝边境做一些甄别类的工作，可以说一辈子都在研究朝鲜...</p>
+				                </div>
+				            </div>
+				        </div>
+				        <HR align=center width=900 color=black SIZE=5>
+						<div class="row no-gutters mt-2">
+				            <div class="col-auto">
+				                <img src="http://www.dunjiaodu.com/d/file/top/2017-03-17/54835fd74541403f24ebffedde93ead7.jpg" style="width: 150px; height:100px;" class="img-fluid" alt="">
+				            </div>
+				            <div class="col">
+				                <div class="card-block px-2">
+				                    <a href=""><h6 class="card-title">中日学者朝核问题对话（三）：新形势下的各国对朝政策</h6></a>
+				                    <p class="card-text" style="line-height:1.3em;">李枏：2017年初，最引人关注的是韩国的政治动荡。朴槿惠“亲信干政门事件”使得民意在韩国政治中的作用越来越明显和重要。韩国迫切需要进行制度创新，而从韩国总统候选人近期对修宪的观点可以看出，限制总统权力几乎是一种趋势...</p>
+				                </div>
+				            </div>
+				        </div>
+				        <HR align=center width=900 color=black SIZE=5>
+						<div class="row no-gutters mt-2">
+				            <div class="col-auto">
+				                <img src="http://www.dunjiaodu.com/d/file/top/2017-03-21/2cc09205ec2e5f41001c096d24a7d8a5.jpg" style="width: 150px; height:100px;" class="img-fluid" alt="">
+				            </div>
+				            <div class="col">
+				                <div class="card-block px-2">
+				                    <a href=""><h6 class="card-title">中日学者朝核问题对话（四）：国际社会如何推动朝鲜半岛无核化</h6></a>
+				                    <p class="card-text" style="line-height:1.3em;">平岩俊司：去年朝鲜进行了四五次的核试验和20次以上的弹道导弹的发射，朝鲜的核问题已经进入了全新阶段。联合国安理会多次通过了决议，对朝鲜进行制裁，但是没有获得所期待的效果。对朝鲜的核问题，有两个极端的选项...</p>
+				                </div>
+				            </div>
+				        </div>
+				        <HR align=center width=900 color=black SIZE=5>
+						<div class="row no-gutters mt-2">
+				            <div class="col-auto">
+				                <img src="http://www.dunjiaodu.com/d/file/top/2017-03-15/76d55f3030731968a53abeb44eed0ef6.jpg" style="width: 150px; height:100px;" class="img-fluid" alt="">
+				            </div>
+				            <div class="col">
+				                <div class="card-block px-2">
+				                    <a href=""><h6 class="card-title">中日学者朝核问题对话：朝鲜核能力评估及其威胁</h6></a>
+				                    <p class="card-text" style="line-height:1.3em;">首先，现在北朝鲜的导弹和火箭的现状。2016年的9月份安倍首相在联合国大会上说北朝鲜的威胁已经到了一个与以往不同的全新阶段。其实，并不仅仅是朝鲜的宣传，实际上从统计学的角度来说，他们也是频繁地在很高技术层面进行了反复的挑衅...</p>
+				                </div>
+				            </div>
+				        </div>
+				        <HR align=center width=900 color=black SIZE=5>
+						<div class="row no-gutters mt-2">
+				            <div class="col-auto">
+				                <img src="images/zh-cn/view/2017-02-15/9c993f6b3b442230c2423218c925e3b1.jpg" style="width: 150px; height:100px;" class="img-fluid" alt="">
+				            </div>
+				            <div class="col">
+				                <div class="card-block px-2">
+				                    <a href=""><h6 class="card-title">许纪霖：未来会诞生东亚共同体吗？</h6></a>
+				                    <p class="card-text" style="line-height:1.3em;">美国国际问题专家基辛格和布热津斯基都曾说过，今天的东亚很有点像二十世纪上半叶的欧洲：欧洲民族主义、国家主义情绪高涨，出现了两次世界大战。然而，二十一世纪的东亚真的是上个世纪的欧洲吗?</p>
+				                </div>
+				            </div>
+				        </div>
+				        <HR align=center width=900 color=black SIZE=5>
+						<div class="row no-gutters mt-2">
+				            <div class="col-auto">
+				                <img src="http://www.dunjiaodu.com/d/file/daguo/2017-02-14/1f03993d1e898af3b0e12fc3c80b104b.jpg" style="width: 150px; height:100px;" class="img-fluid" alt="">
+				            </div>
+				            <div class="col">
+				                <div class="card-block px-2">
+				                    <a href=""><h6 class="card-title">韦森：中国经济的短期增速下行与长期增长前景</h6></a>
+				                    <p class="card-text" style="line-height:1.3em;">对于2017年乃至未来几年的中国经济增长前景，经济学界和政府决策部门已有许多判断和研究。这些研究所产生的研判和预期，不但影响了每年总理《政府工作报告》中关于中国经济增长的年度增长目标，乃至各省市自治区政府的经济增长目标，而且实际上也决定了我们政府的整个宏观经济政策...</p>
+				                </div>
+				            </div>
+				        </div>
+				        <HR align=center width=900 color=black SIZE=5>
+						<div class="row no-gutters mt-2">
+				            <div class="col-auto">
+				                <img src="http://www.dunjiaodu.com/d/file/daguo/2017-02-14/1d1a2697bb20b6f865dbc461ec927d68.jpg" style="width: 150px; height:100px;" class="img-fluid" alt="">
+				            </div>
+				            <div class="col">
+				                <div class="card-block px-2">
+				                    <a href=""><h6 class="card-title">秦前红：中国的司法改革以及面临的问题</h6></a>
+				                    <p class="card-text" style="line-height:1.3em;">秦教授：我今天要跟各位分享的是中国的司法体制改革的问题，影响中国的未来，影响中国发展前景问题的更应该是中国的民主和法治问题...</p>
+				                </div>
+				            </div>
+				        </div>
+				        <HR align=center width=900 color=black SIZE=5>
+						<div class="row no-gutters mt-2">
+				            <div class="col-auto">
+				                <img src="images/zh-cn/view/2017-02-15/78acde1bb19c191422350183115045da.jpg" style="width: 150px; height:100px;" class="img-fluid" alt="">
+				            </div>
+				            <div class="col">
+				                <div class="card-block px-2">
+				                    <a href=""><h6 class="card-title">穆斯林阿訇：全球“反恐” 为何越反越“恐”？</h6></a>
+				                    <p class="card-text" style="line-height:1.3em;">编者按：2016年7月24日，亚太交流与合作基金会、亚太战略发展研究中心和北京普世社会科学研究所等共同主办了2016年中美国际反恐学术研讨会。会上，中美与会者围绕全球趋势、宗教与意识形态、媒体与通信、多边伙伴关系、信息分享等议题进行了深度讨论...</p>
+				                </div>
+				            </div>
+				        </div>
+				        <HR align=center width=900 color=black SIZE=5>
 					</div>
 				</div>
 				<div class="col-1 box indexBox">
+				</div>
+			</div>
+			<div class="row">
+				<HR align=center width=1200 color=black SIZE=5>
+				<div class="col-9 footerBox">
+					<footer class="footer-div">
+						<a class="footer-link" id="copyRight-link" href="">版权声明 </a><b>|</b><a class="footer-link" id="contact-link" href="contact.html"> 联系方式</a>
+						<p style="margin-top:10px;">美中新视角基金会版权所有 Copyright &copy; The U.S.-China New Perspectives Foundation</p>
+						<p>电话TEL：+1（626）656-3512 (U.S.);</p> 
+						<p style="text-indent: 5em;">+86（10）6496-1765（中国)</p>
+					</footer>
+				</div>
+				<div class="col-3 QRcodeBox">
+					<div class="scan-links"> 
+          				<a class="forum-link" href="">
+          					<img class="scan-img" src="images/weixin.png" alt="微信公众号">
+          				</a>
+          				<p style="padding-top:20px;"> 微信公众号 </p>
+      				</div>
 				</div>
 			</div>
 		</div>
