--- a/loop/view.html
+++ b/loop/view.html
@@ -110,7 +110,7 @@
 					            </div>
 					            <div class="col">
 					                <div class="card-block px-2">
-					                    <a href=""><h6 class="card-title">斯坦加龙：“伊朗谈判”和“朝鲜交易”，特朗普在联合国大会演讲中的悖论</h6></a>
+					                    <a href="sitanjialong.html"><h6 class="card-title">斯坦加龙：“伊朗谈判”和“朝鲜交易”，特朗普在联合国大会演讲中的悖论</h6></a>
 					                    <p class="card-text" style="line-height:1.3em;">19日，特朗普总统在联合国大会上的发言第一次强调了国家主权在国际关系中需要发挥更大的作用。他还呼吁联合国解决来自朝鲜的迫在眉睫的威胁。虽然他强调的国家主权和国际合作的想法不一定相互矛盾，但两者之间却存在潜在的博弈关系...</p>
 					                </div>
 					            </div>
@@ -122,7 +122,7 @@
 				            </div>
 				            <div class="col">
 				                <div class="card-block px-2">
-				                    <a href=""><h6 class="card-title">加拉格尔：美国反恐战略再思考，消除恐怖主义威胁需要中美合作</h6></a>
+				                    <a href="jialageer.html"><h6 class="card-title">加拉格尔：美国反恐战略再思考，消除恐怖主义威胁需要中美合作</h6></a>
 				                    <p class="card-text" style="line-height:1.3em;">编者按：在奥巴马执政的八年间，反恐这一问题无疑是工作重点之一。在奥巴马任期行将结束之际，本刊专访了美国全球接触研究所总裁、前美国参谋长联席会议特别助理约翰·加拉格尔，探讨了美国的反恐战略以及中东政策等问题...</p>
 				                </div>
 				            </div>
@@ -134,7 +134,7 @@
 				            </div>
 				            <div class="col">
 				                <div class="card-block px-2">
-				                    <a href=""><h6 class="card-title">中日学者朝核问题对话（二）：朝鲜成功拥核的原因</h6></a>
+				                    <a href="chaoheduihua2-1.html"><h6 class="card-title">中日学者朝核问题对话（二）：朝鲜成功拥核的原因</h6></a>
 				                    <p class="card-text" style="line-height:1.3em;">周志兴：第二节的题目是“朝鲜成功拥核的原因”，第一个发言的是中央党校国际战略研究院的张琏瑰教授。张教授对朝鲜非常了解，他毕业于金日成大学，还曾长期在中朝边境做一些甄别类的工作，可以说一辈子都在研究朝鲜...</p>
 				                </div>
 				            </div>
